# render-cli-dashboard

./: .gitignore  CONFIG_LOADING.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  PATH_SETUP.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TESTING.md  config.yaml.example  install-zsh-plugin.sh  pyproject.toml  render-dashboard.plugin.zsh  requirements.txt  setup.py  verify-install.sh
render_dashboard/: __init__.py  __main__.py  cache.py  cli.py  config.py  models.py  service_manager.py  utils.py
render_dashboard/api/: __init__.py  render.py
render_dashboard/ui/: __init__.py  app.py  widgets.py
tests/: __init__.py  test_config.py  test_models.py  test_utils.py
